# feed-applet-v2

./: Cargo.toml  package-lock.json  package.json
dnas/feed/workdir/: dna.yaml
dnas/feed/zomes/integrity/posts/src/: lib.rs
nh-launcher-applet/: package.json
nh-launcher-applet/demo/: index.html
nh-launcher-applet/src/: appletConfig.ts  feed-applet.ts  index.ts
nh-launcher-applet/workdir/: dna.yaml  happ.yaml  web-happ.yaml
tests/src/: feed.ts  index.ts  utils.ts
tests/src/feed/posts/: post.test.ts
ui/: index.html  package.json
ui/src/: contexts.ts  feed-app-test-harness.ts  feed-app.ts  feed-service.ts  feed-store.ts  index.ts  types.ts  utils.ts
ui/src/components/: all-posts.ts  create-post.ts  edit-post.ts  feed-component.ts  post-detail.ts
workdir/: happ.yaml  web-happ.yaml
