[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.2.0"
hdk = "=0.1.0"
serde = "1"

[workspace.dependencies.posts]
path = "dnas/feed/zomes/coordinator/posts"

[workspace.dependencies.posts_integrity]
path = "dnas/feed/zomes/integrity/posts"
